syntax = "proto3";

package app;

service AppController {
    rpc getBookById(IdQuery) returns (BookFull);
    
    rpc getBooks(Empty) returns (BooksShort);
}

message Empty {
}

message IdQuery {
    required string id = 1;
}

message BooksShort {
    repeated BookShort books = 1;
}

message BookShort {
    string id = 1;
    string title = 2;
    string image = 3;
}

message BookFull {
    string id = 1;
    string title = 2;
    string image = 3;
    string description = 4;
    string year = 5;
}
